# Fire-Detection---YoloX

./: README.md  requirements.txt
DFire_and_FireNet_coco/: README.dataset.txt  README.roboflow.txt
DFire_and_FireNet_coco/valid/: _annotations.coco.json
cpp/: CMakeLists.txt  README.md  engine.cpp  engine.h  export.cpp  export_rotate.cpp  extensions.cpp  infer.cpp  setup.py  test_engine.py  test_engine_rotate.py  test_postprocess.py  yoloxtrt.py
cpp/csrc/cuda/: decode.cu  decode.h  nms.cu  nms.h  nms_rotated.cu  nms_rotated.h  utils.h
cpp/csrc/plugins/: DecodePlugin.h  DecodeRotatePlugin.h  NMSPlugin.h  NMSRotatedPlugin.h
cpp/scripts/: test_decode.py  test_trt.py
deepstream/: CMakeLists.txt  README.md  detect.cpp  nvdsparsebbox_yolox.cpp
deepstream/configs/: infer_rotate_x86.txt  infer_x86.txt  tracker.txt
deepstream/includes/: utils.cpp  utils.h
deepstream/plugins/: CMakeLists.txt  README.md
deepstream/plugins/gstyoloxparser/: README.md  gstyoloxparser.cpp  gstyoloxparser.h
deepstream/plugins/include/: yolox_meta.h
exps/releases/: m_coco.py  nano_220316.py  nano_230323.py  nano_coco.py  nano_fisheyee_220818.py  nano_wds_230620.py  s_coco.py  tiny_coco.py
pkgs/: yolox.py
scripts/: clean_annotation.py  convert_coco_person_annotation.py  convert_fisheye2normal.py  merge_data_json.py  onnx_verify.py  test_dataloader.py  test_dataloader_rotate.py
tools/: demo.py  demo_rotate.py  eval.py  export_onnx.py  train.py
yolox/core/: trainer.py
yolox/data/: __init__.py  data_augment.py
yolox/data/datasets/: __init__.py  coco.py
yolox/evaluators/: coco_evaluator.py
yolox/exp/: yolox_base.py
yolox/models/: __init__.py  build.py  darknet.py  losses.py  network_blocks.py  yolo_fpn.py  yolo_head.py  yolo_head_rotate.py
yolox/utils/: boxes.py  compat.py  visualize.py
